3 chan gesture recognition

--- a/Conceptor Patterns 3 CK.ipynb
+++ b/Conceptor Patterns 3 CK.ipynb
@@ -638,7 +638,9 @@
   {
    "cell_type": "code",
    "execution_count": 783,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def createGeneratorState(net):\n",
