--- a/workshop/gestures_detection.ipynb
+++ b/workshop/gestures_detection.ipynb
@@ -22,6 +22,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#plot(np.tanh(np.random.randn(10)))\n",
+    "def makeRandomWalk(len):\n",
+    "    pt = zeros(len)\n",
+    "    pt[0] = np.random.randn(1)\n",
+    "    for n in range(pt.size-1):\n",
+    "        pt[n+1] = pt[n] + np.random.randn(1)\n",
+    "    pt = pt - np.min(pt)\n",
+    "    pt = (pt / np.max(pt) * 2) - 1\n",
+    "    return pt\n",
+    "    \n",
+    "\n",
+    "#plot()\n",
+    "pattern1 = makeRandomWalk(20)\n",
+    "pattern2 = makeRandomWalk(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(pattern1)\n",
+    "plot(pattern2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get current working path\n",
     "cwd = os.getcwd()\n",
     "print( cwd )\n",
@@ -43,6 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "figsize(20,5)\n",
     "# to normalize the two gestures to each other, we find the maximum value in the two arrays:\n",
     "maxValue = max( max(gesture1), max(gesture2) )\n",
     "\n",
@@ -151,14 +184,26 @@
     "\n",
     "    return locals()\n",
     "\n",
-    "params = {'N':100, 'NetSR':1.9, 'NetinpScaling':20,'BiasScaling':0.6,\n",
-    "         'washoutLength':300, 'learnLength':30, \n",
+    "params = {'N':40, 'NetSR':1.2, 'NetinpScaling':1,'BiasScaling':0.6,\n",
+    "         'washoutLength':300, 'learnLength':40, \n",
     "          'LR': 0.6,\n",
     "#           'patts':np.array([lambda x:pLoop(x,p_rw1), lambda x: pLoop(x,p_rw2)])\n",
-    "          'patts':np.array([lambda x:pLoop(x,gesture1), lambda x: pLoop(x,gesture2)])\n",
+    "          'patts':np.array([lambda x:pLoop(x,pattern1), lambda x: pLoop(x,pattern2)])\n",
     "         }\n",
     "\n",
     "net = makeClassifierNetwork(params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# savedNet = net\n",
+    "net = savedNet"
    ]
   },
   {
@@ -241,10 +286,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "conceptorSampleSize = 10\n",
+    "conceptorSampleSize = 20\n",
     "conceptorNets = np.zeros(conceptorSampleSize, dtype=np.object)\n",
     "figsize(15,conceptorSampleSize * 1.9)\n",
     "for i_cnet in range(conceptorSampleSize):\n",
@@ -262,7 +309,7 @@
    "outputs": [],
    "source": [
     "#which are the best apertures?\n",
-    "bestConceptor = conceptorNets[2]\n",
+    "bestConceptor = conceptorNets[12]\n",
     "import dill as pickle\n",
     "with open(r\"net.pickle\", \"wb\") as output_file:\n",
     "    pickle.dump(bestConceptor, output_file, protocol=0)"
@@ -294,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
