update with performance recording

--- a/notebooks/Accelero-oscinput-remote.ipynb
+++ b/notebooks/Accelero-oscinput-remote.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# inputValues = np.zeros(3)\n",
@@ -25,9 +27,19 @@
     "isRecording = False\n",
     "modelIsTrained = False\n",
     "\n",
+    "trainedIndices = [0,1,2,3]\n",
+    "\n",
+    "\n",
+    "perfIndex = 0\n",
+    "perfTakeIndex = 0\n",
+    "isPerforming = False\n",
+    "\n",
     "### gestures\n",
-    "gestures = np.zeros(10, dtype=np.object)\n",
+    "perform_gestures = np.zeros(30, dtype=np.object)\n",
+    "\n",
+    "train_gestures = np.zeros(10, dtype=np.object)\n",
     "newGesture = np.zeros(0)\n",
+    "newOutput = np.zeros(0)\n",
     "\n",
     "# print( shape(gestures ) )\n",
     "\n",
@@ -49,10 +61,10 @@
    "source": [
     "import dill as pickle\n",
     "\n",
-    "def save_gestures_to_file():\n",
+    "def save_data_to_file( data, tag ):\n",
     "    ts = str(datetime.datetime.timestamp(datetime.datetime.now()))\n",
-    "    with open(r\"patterns_chrysalis_\" + ts + \".pickled\", \"wb\") as output_file:\n",
-    "        pickle.dump(gestures, output_file, protocol=0)\n"
+    "    with open(r\"patterns_chrysalis_\" + tag + \"_\" + ts + \".pickled\", \"wb\") as output_file:\n",
+    "        pickle.dump(data, output_file, protocol=0)\n"
    ]
   },
   {
@@ -81,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def makeClassifierNetwork(p):\n",
@@ -202,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import scipy.optimize\n",
@@ -450,7 +466,7 @@
     "        restored = pickle.load(input_file)\n",
     "    return restored\n",
     "\n",
-    "gestures = loadObject( \"patterns_chrysalis_1515598716.53275.pickled\" )"
+    "train_gestures = loadObject( \"patterns_chrysalis_1515610071.361456.pickled\" )"
    ]
   },
   {
@@ -463,10 +479,10 @@
     "%run ../python/oscserver.py\n",
     "\n",
     "def onTrainModel( indices ):\n",
-    "    global params, net, patternCs, apertures\n",
-    "    save_gestures_to_file()\n",
+    "    global params, net, patternCs, apertures, trainedIndices\n",
+    "    save_data_to_file( train_gestures, \"train\" )\n",
     "    print( \"training model with gestures\", indices )\n",
-    "    params['patts'] = gestures[ indices ]\n",
+    "    params['patts'] = train_gestures[ indices ]\n",
     "    oscserver.send_value( \"/model/trained\", 0 )\n",
     "    \n",
     "    net = makeClassifierNetwork(params)\n",
@@ -490,6 +506,7 @@
     "    cellbell.ding()\n",
     "    \n",
     "    oscserver.send_value( \"/model/trained\", 3 )\n",
+    "    trainedIndices = indices\n",
     "    return True\n",
     "\n",
     "def onStartModel():\n",
@@ -503,6 +520,26 @@
     "    oscserver.send_value( \"/model/started\", 1 )\n",
     "    return True\n",
     "\n",
+    "def onPerformOn( ind ):\n",
+    "    global perfIndex, isPerforming, newGesture, newOutput\n",
+    "    perfIndex = ind\n",
+    "    isPerforming = True\n",
+    "    newGesture = np.zeros(0)\n",
+    "    newOutput = np.zeros(0)\n",
+    "    print( \"started performing\", perfIndex, \"take\", perfTakeIndex )\n",
+    "    return True\n",
+    "\n",
+    "def onPerformOff():\n",
+    "    global isPerforming, newGesture, newOutput, perform_gestures, perfTakeIndex\n",
+    "    isPerforming = False\n",
+    "    newGesture = newGesture.reshape( int( newGesture.shape[0]/len(inputValues)),len(inputValues))\n",
+    "    newOutput = newOutput.reshape( int( newGesture.shape[0]/len(outputValues)),len(outputValues))\n",
+    "    perform_gestures[ perfTakeIndex ] = [ perfIndex, trainedIndices, newGesture, newOutput ]\n",
+    "    print( \"stopped performing\", perfIndex, shape( newGesture ), \"take\", perfTakeIndex )\n",
+    "    save_data_to_file( perform_gestures, \"perform\" )\n",
+    "    perfTakeIndex = perfTakeIndex + 1\n",
+    "    return True\n",
+    "\n",
     "\n",
     "def onRecordOn( ind ):\n",
     "    global recIndex, isRecording, newGesture, modelIsTrained\n",
@@ -514,22 +551,26 @@
     "    return True\n",
     "\n",
     "def onRecordOff():\n",
-    "    global isRecording, newGesture, gestures\n",
+    "    global isRecording, newGesture, train_gestures\n",
     "    isRecording = False\n",
     "    newGesture = newGesture.reshape( int( newGesture.shape[0]/len(inputValues)),len(inputValues))\n",
-    "    gestures[ recIndex ] = newGesture\n",
+    "    train_gestures[ recIndex ] = newGesture\n",
     "    print( \"stopped recording\", recIndex, shape( newGesture ) )\n",
     "    return True\n",
     "\n",
     "def onAccelero(args):\n",
-    "    global inputValues, newGesture\n",
+    "    global inputValues, newGesture, newOutput, outputValues\n",
     "#     print( args )\n",
     "    inputValues = args\n",
     "    if isRecording:\n",
     "        newGesture = np.append( newGesture, inputValues )\n",
     "    if modelIsTrained:\n",
     "        output = iterate(net, patternCs, classifierConceptors, inputValues)\n",
+    "        outputValues = output\n",
     "        oscserver.send_array( \"/output\", output )\n",
+    "        if isPerforming:\n",
+    "            newGesture = np.append( newGesture, inputValues )\n",
+    "            newOutput = np.append( newOutput, outputValues )\n",
     "    return True\n",
     "\n",
     "def onExit():\n",
@@ -543,6 +584,8 @@
     "oscserver.onAccelero = onAccelero\n",
     "oscserver.onRecordOff = onRecordOff\n",
     "oscserver.onRecordOn = onRecordOn\n",
+    "oscserver.onPerformOff = onPerformOff\n",
+    "oscserver.onPerformOn = onPerformOn\n",
     "oscserver.onTrainModel = onTrainModel\n",
     "oscserver.onStartModel = onStartModel\n",
     "\n",
