--- a/notebooks/Accelero-oscinput-remote.ipynb
+++ b/notebooks/Accelero-oscinput-remote.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "import cellbell\n",
     "%pylab inline\n",
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -22,6 +30,7 @@
    "source": [
     "# inputValues = np.zeros(3)\n",
     "inputValues = np.zeros(12)\n",
+    "outputValues = np.zeros(5)\n",
     "\n",
     "recIndex = 0\n",
     "isRecording = False\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,12 +73,13 @@
     "def save_data_to_file( data, tag ):\n",
     "    ts = str(datetime.datetime.timestamp(datetime.datetime.now()))\n",
     "    with open(r\"patterns_chrysalis_\" + tag + \"_\" + ts + \".pickled\", \"wb\") as output_file:\n",
-    "        pickle.dump(data, output_file, protocol=0)\n"
+    "        pickle.dump(data, output_file, protocol=0)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -380,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -455,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,14 +476,290 @@
     "        restored = pickle.load(input_file)\n",
     "    return restored\n",
     "\n",
-    "train_gestures = loadObject( \"patterns_chrysalis_1515610071.361456.pickled\" )"
+    "train_gestures = loadObject( \"patterns_chrysalis_train_1515671592.496429.pickled\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "server created\n",
+      "training model with gestures [0, 7, 8, 9]\n",
+      "Observing pattern  0\n",
+      "Done\n",
+      "Observing pattern  1\n",
+      "Done\n",
+      "Observing pattern  2\n",
+      "Done\n",
+      "Observing pattern  3\n",
+      "Done\n",
+      "Made classifier network\n",
+      "Pattern:  0\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983    0.0027748        initial\n",
+      "Pattern:  0\n",
+      "    2        309.017   0.00347905        golden\n",
+      "Pattern:  0\n",
+      "    3        118.034   0.00230699        golden\n",
+      "Pattern:  0\n",
+      "    4         72.949   0.00259872        golden\n",
+      "Pattern:  0\n",
+      "    5        125.133   0.00232741        parabolic\n",
+      "Pattern:  0\n",
+      "    6        113.553   0.00230022        parabolic\n",
+      "Pattern:  0\n",
+      "    7        98.0436   0.00232456        golden\n",
+      "Pattern:  0\n",
+      "    8        110.892   0.00229878        parabolic\n",
+      "Pattern:  0\n",
+      "    9         110.23   0.00229875        parabolic\n",
+      "Pattern:  0\n",
+      "   10        109.896   0.00229878        parabolic\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Pattern:  1\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983   0.00265792        initial\n",
+      "Pattern:  1\n",
+      "    2        309.017   0.00345068        golden\n",
+      "Pattern:  1\n",
+      "    3        118.034   0.00220908        golden\n",
+      "Pattern:  1\n",
+      "    4         72.949   0.00259408        golden\n",
+      "Pattern:  1\n",
+      "    5        129.794   0.00223382        parabolic\n",
+      "Pattern:  1\n",
+      "    6        118.367   0.00220929        parabolic\n",
+      "Pattern:  1\n",
+      "    7        115.782   0.00220852        parabolic\n",
+      "Pattern:  1\n",
+      "    8        99.4213   0.00225594        golden\n",
+      "Pattern:  1\n",
+      "    9        116.115   0.00220851        parabolic\n",
+      "Pattern:  1\n",
+      "   10        116.449   0.00220853        parabolic\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Pattern:  2\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983   0.00219539        initial\n",
+      "Pattern:  2\n",
+      "    2        309.017   0.00256929        golden\n",
+      "Pattern:  2\n",
+      "    3        118.034   0.00219534        golden\n",
+      "Pattern:  2\n",
+      "    4        154.488   0.00212434        parabolic\n",
+      "Pattern:  2\n",
+      "    5        154.821   0.00212453        parabolic\n",
+      "Pattern:  2\n",
+      "    6        150.402    0.0021229        parabolic\n",
+      "Pattern:  2\n",
+      "    7        138.038   0.00213091        golden\n",
+      "Pattern:  2\n",
+      "    8        149.131   0.00212283        parabolic\n",
+      "Pattern:  2\n",
+      "    9        149.464   0.00212283        parabolic\n",
+      "Pattern:  2\n",
+      "   10        149.798   0.00212284        parabolic\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Pattern:  3\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983    0.0032996        initial\n",
+      "Pattern:  3\n",
+      "    2        309.017   0.00372412        golden\n",
+      "Pattern:  3\n",
+      "    3        118.034   0.00287448        golden\n",
+      "Pattern:  3\n",
+      "    4         72.949   0.00266889        golden\n",
+      "Pattern:  3\n",
+      "    5         45.085   0.00295799        golden\n",
+      "Pattern:  3\n",
+      "    6        84.3554   0.00269079        parabolic\n",
+      "Pattern:  3\n",
+      "    7        66.4098    0.0026797        parabolic\n",
+      "Pattern:  3\n",
+      "    8        73.8312     0.002669        parabolic\n",
+      "Pattern:  3\n",
+      "    9        73.2824    0.0026689        parabolic\n",
+      "Pattern:  3\n",
+      "   10        72.6157   0.00266894        parabolic\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Calculated apertures and conceptors\n",
+      "Pattern  0  classification score:  0.22 , separation:  0.247158917729\n",
+      "Pattern  1  classification score:  0.87 , separation:  0.0206984747781\n",
+      "Pattern  2  classification score:  1.0 , separation:  0.289141275207\n",
+      "Pattern  3  classification score:  0.77 , separation:  0.0509886686682\n",
+      "received message  /osc/target  with arguments:  57121 192.168.0.3\n",
+      "training model with gestures [0, 7, 8, 9]\n",
+      "Observing pattern  0\n",
+      "Done\n",
+      "Observing pattern  1\n",
+      "Done\n",
+      "Observing pattern  2\n",
+      "Done\n",
+      "Observing pattern  3\n",
+      "Done\n",
+      "Made classifier network\n",
+      "Pattern:  0\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983   0.00259986        initial\n",
+      "Pattern:  0\n",
+      "    2        309.017   0.00267033        golden\n",
+      "Pattern:  0\n",
+      "    3        118.034   0.00252898        golden\n",
+      "Pattern:  0\n",
+      "    4         72.949   0.00285332        golden\n",
+      "Pattern:  0\n",
+      "    5        145.898   0.00254229        golden\n",
+      "Pattern:  0\n",
+      "    6        110.142   0.00253888        parabolic\n",
+      "Pattern:  0\n",
+      "    7        127.036    0.0025274        parabolic\n",
+      "Pattern:  0\n",
+      "    8        123.901   0.00252703        parabolic\n",
+      "Pattern:  0\n",
+      "    9        124.283   0.00252703        parabolic\n",
+      "Pattern:  0\n",
+      "   10        124.617   0.00252704        parabolic\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Pattern:  1\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983   0.00249085        initial\n",
+      "Pattern:  1\n",
+      "    2        309.017   0.00239466        golden\n",
+      "Pattern:  1\n",
+      "    3        381.966   0.00230929        golden\n",
+      "Pattern:  1\n",
+      "    4        427.051   0.00226291        golden\n",
+      "Pattern:  1\n",
+      "    5        454.915   0.00223757        golden\n",
+      "Pattern:  1\n",
+      "    6        472.136   0.00222318        golden\n",
+      "Pattern:  1\n",
+      "    7        482.779   0.00221474        golden\n",
+      "Pattern:  1\n",
+      "    8        489.357   0.00220971        golden\n",
+      "Pattern:  1\n",
+      "    9        493.422   0.00220666        golden\n",
+      "Pattern:  1\n",
+      "   10        495.935    0.0022048        golden\n",
+      "Pattern:  1\n",
+      "   11        497.488   0.00220366        golden\n",
+      "Pattern:  1\n",
+      "   12        498.447   0.00220296        golden\n",
+      "Pattern:  1\n",
+      "   13         499.04   0.00220252        golden\n",
+      "Pattern:  1\n",
+      "   14        499.407   0.00220226        golden\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Pattern:  2\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983    0.0027211        initial\n",
+      "Pattern:  2\n",
+      "    2        309.017   0.00254655        golden\n",
+      "Pattern:  2\n",
+      "    3        381.966   0.00250069        golden\n",
+      "Pattern:  2\n",
+      "    4        416.113   0.00248398        parabolic\n",
+      "Pattern:  2\n",
+      "    5        448.155   0.00246959        golden\n",
+      "Pattern:  2\n",
+      "    6        467.958   0.00246108        golden\n",
+      "Pattern:  2\n",
+      "    7        480.197   0.00245591        golden\n",
+      "Pattern:  2\n",
+      "    8        487.761   0.00245274        golden\n",
+      "Pattern:  2\n",
+      "    9        492.436   0.00245079        golden\n",
+      "Pattern:  2\n",
+      "   10        495.325   0.00244959        golden\n",
+      "Pattern:  2\n",
+      "   11        497.111   0.00244885        golden\n",
+      "Pattern:  2\n",
+      "   12        498.214   0.00244839        golden\n",
+      "Pattern:  2\n",
+      "   13        498.896   0.00244811        golden\n",
+      "Pattern:  2\n",
+      "   14        499.318   0.00244793        golden\n",
+      "Pattern:  2\n",
+      "   15        499.651   0.00244779        golden\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Pattern:  3\n",
+      " \n",
+      " Func-count     x          f(x)          Procedure\n",
+      "    1        190.983   0.00245384        initial\n",
+      "Pattern:  3\n",
+      "    2        309.017   0.00229162        golden\n",
+      "Pattern:  3\n",
+      "    3        381.966   0.00223352        golden\n",
+      "Pattern:  3\n",
+      "    4        477.067   0.00218382        parabolic\n",
+      "Pattern:  3\n",
+      "    5        440.742   0.00220039        golden\n",
+      "Pattern:  3\n",
+      "    6        463.192   0.00218987        golden\n",
+      "Pattern:  3\n",
+      "    7        485.826   0.00218015        golden\n",
+      "Pattern:  3\n",
+      "    8         491.24   0.00217794        golden\n",
+      "Pattern:  3\n",
+      "    9        494.586   0.00217659        golden\n",
+      "Pattern:  3\n",
+      "   10        496.654   0.00217577        golden\n",
+      "Pattern:  3\n",
+      "   11        497.932   0.00217526        golden\n",
+      "Pattern:  3\n",
+      "   12        498.722   0.00217495        golden\n",
+      "Pattern:  3\n",
+      "   13         499.21   0.00217475        golden\n",
+      "Pattern:  3\n",
+      "   14        499.543   0.00217462        golden\n",
+      "\n",
+      "Optimization terminated successfully;\n",
+      "The returned value satisfies the termination criteria\n",
+      "(using xtol =  1 )\n",
+      "Calculated apertures and conceptors\n",
+      "Pattern  0  classification score:  0.01 , separation:  7.85435942116\n",
+      "Pattern  1  classification score:  1.0 , separation:  0.0128797468149\n",
+      "Pattern  2  classification score:  1.0 , separation:  0.0747342850003\n",
+      "Pattern  3  classification score:  1.0 , separation:  0.0426855587887\n",
+      "Generated classifier conceptors\n",
+      "started performing 0 take 0\n",
+      "stopped performing 0 (211, 12) take 0\n"
+     ]
+    }
+   ],
    "source": [
     "## load the functions for receiving and sending osc\n",
     "%run ../python/oscserver.py\n",
@@ -533,7 +819,7 @@
     "    global isPerforming, newGesture, newOutput, perform_gestures, perfTakeIndex\n",
     "    isPerforming = False\n",
     "    newGesture = newGesture.reshape( int( newGesture.shape[0]/len(inputValues)),len(inputValues))\n",
-    "    newOutput = newOutput.reshape( int( newGesture.shape[0]/len(outputValues)),len(outputValues))\n",
+    "    newOutput = newOutput.reshape( int( newOutput.shape[0]/len(outputValues)),len(outputValues))\n",
     "    perform_gestures[ perfTakeIndex ] = [ perfIndex, trainedIndices, newGesture, newOutput ]\n",
     "    print( \"stopped performing\", perfIndex, shape( newGesture ), \"take\", perfTakeIndex )\n",
     "    save_data_to_file( perform_gestures, \"perform\" )\n",
@@ -618,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
