update way of recording performed gestures

--- a/notebooks/Accelero-oscinput-remote.ipynb
+++ b/notebooks/Accelero-oscinput-remote.ipynb
@@ -40,15 +40,19 @@
     "\n",
     "\n",
     "perfIndex = 0\n",
-    "perfTakeIndex = 0\n",
+    "perfGestIndex = 0\n",
+    "perfStartIndex = 0\n",
+    "perfEndIndex = 0\n",
+    "runningIndex = 0\n",
+    "\n",
     "isPerforming = False\n",
     "\n",
     "### gestures\n",
-    "perform_gestures = np.zeros(30, dtype=np.object)\n",
-    "\n",
+    "gesture_indices = np.zeros( 50, dtype=np.object )\n",
     "train_gestures = np.zeros(10, dtype=np.object)\n",
     "newGesture = np.zeros(0)\n",
-    "newOutput = np.zeros(0)\n",
+    "\n",
+    "runningGesture = np.zeros(0)\n",
     "\n",
     "# print( shape(gestures ) )\n",
     "\n",
@@ -466,7 +470,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import dill as pickle\n",
@@ -807,23 +813,21 @@
     "    return True\n",
     "\n",
     "def onPerformOn( ind ):\n",
-    "    global perfIndex, isPerforming, newGesture, newOutput\n",
+    "    global perfIndex, perfStartIndex\n",
     "    perfIndex = ind\n",
-    "    isPerforming = True\n",
-    "    newGesture = np.zeros(0)\n",
-    "    newOutput = np.zeros(0)\n",
-    "    print( \"started performing\", perfIndex, \"take\", perfTakeIndex )\n",
+    "    perfStartIndex = runningIndex\n",
+    "    print( \"started performing\", perfIndex, \"start\", perfStartIndex )\n",
     "    return True\n",
     "\n",
     "def onPerformOff():\n",
-    "    global isPerforming, newGesture, newOutput, perform_gestures, perfTakeIndex\n",
-    "    isPerforming = False\n",
-    "    newGesture = newGesture.reshape( int( newGesture.shape[0]/len(inputValues)),len(inputValues))\n",
-    "    newOutput = newOutput.reshape( int( newOutput.shape[0]/len(outputValues)),len(outputValues))\n",
-    "    perform_gestures[ perfTakeIndex ] = [ perfIndex, trainedIndices, newGesture, newOutput ]\n",
-    "    print( \"stopped performing\", perfIndex, shape( newGesture ), \"take\", perfTakeIndex )\n",
-    "    save_data_to_file( perform_gestures, \"perform\" )\n",
-    "    perfTakeIndex = perfTakeIndex + 1\n",
+    "    global perfIndex, perfStartIndex, perfEndIndex, perfGestIndex\n",
+    "    perfEndIndex = runningIndex\n",
+    "    gesture_indices[ perfGestIndex ] = [ perfIndex, perfStartIndex, perfEndIndex, trainedIndices ]\n",
+    "    print( \"stopped performing\", perfIndex, \"start\", perfStartIndex. \"end\", perfEndIndex )\n",
+    "    save_data_to_file( gesture_indices, \"gesture_indices\" )\n",
+    "    save_data_to_file( runningGesture, \"runningGesture\" )\n",
+    "    perfGestIndex = (perfGestIndex + 1)%50\n",
+    "    perfIndex = -1\n",
     "    return True\n",
     "\n",
     "\n",
@@ -854,9 +858,8 @@
     "        output = iterate(net, patternCs, classifierConceptors, inputValues)\n",
     "        outputValues = output\n",
     "        oscserver.send_array( \"/output\", output )\n",
-    "        if isPerforming:\n",
-    "            newGesture = np.append( newGesture, inputValues )\n",
-    "            newOutput = np.append( newOutput, outputValues )\n",
+    "        runningGesture = np.append( runningGesture, np.concatenate( (runningIndex, inputValues, outputValues, trainedIndices, perfIndex ) ) )\n",
+    "        runningIndex = runningIndex + 1\n",
     "    return True\n",
     "\n",
     "def onExit():\n",
@@ -876,6 +879,28 @@
     "oscserver.onStartModel = onStartModel\n",
     "\n",
     "oscserver.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 4\n",
+    "a = (a + 1)%3\n",
+    "a"
    ]
   },
   {
@@ -904,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
